<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hc.jetpackdemo.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_core_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hc.jetpackdemo.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hc.jetpackdemo.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_detataiFragment"
            app:destination="@id/detataiFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_close_exit" />
    </fragment>
    <fragment
        android:id="@+id/detataiFragment"
        android:name="com.hc.jetpackdemo.ui.detail.DetataiFragment"
        android:label="DetailLabel"
        tools:layout="@layout/fragment_detatai">
        <action
            android:id="@+id/action_detataiFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
        <argument android:name="detail_name"
            app:argType="string"
            android:defaultValue="whc" />
    </fragment>
</navigation>